# crab-db

./: Cargo.toml
client/: Cargo.toml
client/src/: lib.rs  main.rs
client/tests/: integration_test.rs
crab_db_common/: Cargo.toml
crab_db_common/src/: lib.rs
proto/: crab_db.proto
server/: Cargo.toml  build.rs
server/src/: main.rs
server/src/file/: actor.rs  bson_utils.rs  mod.rs  record.rs  segment.rs
server/src/protocol/: mod.rs
src/: file_actor.rs  main.rs
src/file/: actor.rs  record.rs
