[package]
name = "crab-db"
version = "0.1.0"
authors = ["Blake Hildebrand <baugusthildebrand@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1"
tonic = "0.4"
prost = "0.7"
tokio = { version = "1.0", features = ["full"] }
tokio-util = { version = "0.6", features = ["codec"] }

[build-dependencies]
tonic-build = "0.4"
