[package]
name = "crab-db"
version = "0.1.0"
authors = ["Blake Hildebrand <baugusthildebrand@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = { version = "1", features = ["serde"] }
tonic = "0.4"
prost = "0.7"
tokio = { version = "1.14", features = ["full"] }
tokio-util = { version = "0.6", features = ["codec"] }
tracing = "0.1"
tracing-subscriber = "0.2"
byteorder = "1"
bson = "2.0"
serde = { version = "1.0", features = ["derive"]}

[build-dependencies]
tonic-build = "0.4"
